dont try to hard to support perl versions < 5.14
Signed-off-by: Adam Stokes <adam.stokes@ubuntu.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,7 @@ install:
   - "dzil listdeps | cpanm --notest"
 script:
   - "dzil test"
+matrix:
+  allow_failures:
+    - perl: "5.10"
+    - perl: "5.12"
