--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: libnet-oauth-lp-perl
 Section: perl
 Priority: optional
 Build-Depends: debhelper (>= 8)
-Build-Depends-Indep: perl (>= 5.10.1), libnet-oauth-perl, libtest-most-perl, libyaml-perl, libmoose-perl, libmoosex-strictconstructor-perl, libmodern-perl-perl
+Build-Depends-Indep: perl (>= 5.14.1), libnet-oauth-perl, libtest-most-perl, libyaml-perl, libmoose-perl
 Maintainer: Adam Stokes <adam.stokes@ubuntu.com>
 Standards-Version: 3.9.2
 Homepage: https://github.com/battlemidget/Net-OAuth-LP
@@ -11,7 +11,7 @@ Vcs-Browser: https://github.com/battlemidget/Net-OAuth-LP
 
 Package: libnet-oauth-lp-perl
 Architecture: all
-Depends: ${perl:Depends}, ${misc:Depends}, perl (>= 5.10.1), libnet-oauth-perl
+Depends: ${perl:Depends}, ${misc:Depends}, perl (>= 5.14.1), libnet-oauth-perl, libyaml-perl, libmoose-perl
 Description: Launchpad.net authorization and client
  Net::OAuth::LP implements an easy way to authorize yourself against
  Launchpad.net and access its API RESTfully.
