--- a/dist.ini
+++ b/dist.ini
@@ -1,17 +1,17 @@
 name = Net-OAuth-LP
-version = 0.1.0
+abstract = Authorization/Authentication against Launchpad.net
 author = Adam Stokes <adam.stokes@ubuntu.com>
 license = Perl_5
 copyright_holder = Adam Stokes
+copyright_year = 2013
+
+version = 0.001
 
 [@Basic]
-
-[ModuleBuild]
-[PodSyntaxTests]
-[PodCoverageTests]
-[Test::Perl::Critic]
+[AutoPrereqs]
 
 [ShareDir]
 dir = data
 
-[AutoPrereqs]
+[GithubMeta]
+[Git::ExcludeUntracked]
