--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,23 @@
 ---
 language: perl
 perl:
-- '5.10.1'
-- '5.12.5'
-- '5.14.4'
-- '5.16.3'
-- '5.18.0'
+- '5.10'
+- '5.12'
+- '5.14'
+- '5.16'
+- '5.18'
 notifications:
   email: false
 install:
-- cpanm --notest Dist::Zilla
-- dzil authordeps | cpanm --notest
-- dzil listdeps | cpanm --notest
+- sudo cpanm --notest Dist::Zilla
+- sudo dzil authordeps | cpanm --notest
+- sudo dzil listdeps | cpanm --notest
 script:
 - dzil test
 matrix:
   allow_failures:
-  - perl: '5.10.1'
-  - perl: '5.12.5'
-  - perl: '5.18.0'
+  - perl: '5.10'
+  - perl: '5.12'
+  - perl: '5.18'
 
 
