Split api into models
Signed-off-by: Adam Stokes <adam.stokes@ubuntu.com>

--- a/dist.ini
+++ b/dist.ini
@@ -5,10 +5,11 @@ license = Perl_5
 copyright_holder = Adam Stokes
 copyright_year = 2013
 
-version = 0.002
+version = 0.003
 
 [@Basic]
 [AutoPrereqs]
+[OurPkgVersion]
 
 [ShareDir]
 dir = data
