prepping new release
Signed-off-by: Adam Stokes <adam.stokes@ubuntu.com>

--- a/dist.ini
+++ b/dist.ini
@@ -16,3 +16,7 @@ dir = data
 
 [GithubMeta]
 [Git::ExcludeUntracked]
+[NextRelease]
+time_zone = America/New_York
+filename = Changes
+format = %-6v %{yyyy-MM-dd HH:mm:ss}d
