--- a/dist.ini
+++ b/dist.ini
@@ -5,8 +5,6 @@ license = Perl_5
 copyright_holder = Adam Stokes
 copyright_year = 2013
 
-version = 0.011
-
 [@Basic]
 [AutoPrereqs]
 [OurPkgVersion]
@@ -16,7 +14,5 @@ dir = data
 
 [GithubMeta]
 [Git::ExcludeUntracked]
-[NextRelease]
-time_zone = America/New_York
-filename = Changes
-format = %-6v %{yyyy-MM-dd HH:mm:ss}d
+[Git::NextVersion]
+first_version = 0.010;
