--- a/dist.ini
+++ b/dist.ini
@@ -5,10 +5,25 @@ license = Perl_5
 copyright_holder = Adam Stokes
 copyright_year = 2013
 
-[@Basic]
+[PruneCruft]
+[ManifestSkip]
+[MetaYAML]
+[License]
+[Readme]
+[ExtraTests]
+[MakeMaker]
+[Manifest]
+[TestRelease]
+[ConfirmRelease]
+[ExecDir]
+[ShareDir]
+[CPANFile]
+[UploadToCPAN]
 [AutoPrereqs]
 [OurPkgVersion]
 [ReadmeFromPod]
+[GatherDir]
+exclude_filename=README.pod
 
 [ShareDir]
 dir = data
