fix auth to wait for keypress
Signed-off-by: Adam Stokes <adam.stokes@ubuntu.com>

--- a/dist.ini
+++ b/dist.ini
@@ -29,3 +29,7 @@ exclude_filename=README.pod
 [Git::ExcludeUntracked]
 [Git::NextVersion]
 
+[Prereqs]
+indirect = 0;
+multidimensional = 0;
+bareword::filehandles = 0;
