--- a/dist.ini
+++ b/dist.ini
@@ -30,6 +30,9 @@ exclude_filename=README.pod
 [Git::NextVersion]
 
 [Prereqs]
-indirect = 0;
-multidimensional = 0;
-bareword::filehandles = 0;
+-phase = test
+-relationship = recommends
+
+indirect = 0
+multidimensional = 0
+bareword::filehandles = 0
