Extend pod coverage, start work on supporting 5.18
Signed-off-by: Adam Stokes <adam.stokes@ubuntu.com>

--- a/dist.ini
+++ b/dist.ini
@@ -32,7 +32,7 @@ exclude_filename=README.pod
 [Prereqs]
 -phase = test
 -relationship = recommends
-
+Pod::Coverage = 0
 indirect = 0
 multidimensional = 0
 bareword::filehandles = 0
