convert to milla spec
Signed-off-by: Adam Stokes <adam.stokes@ubuntu.com>

--- a/dist.ini
+++ b/dist.ini
@@ -1,39 +1,1 @@
-name = Net-OAuth-LP
-abstract = Authorization/Authentication against Launchpad.net
-author = Adam Stokes <adam.stokes@ubuntu.com>
-license = Perl_5
-copyright_holder = Adam Stokes
-copyright_year = 2013
-
-[PruneCruft]
-[ManifestSkip]
-[MetaYAML]
-[License]
-[Readme]
-[ExtraTests]
-[MakeMaker]
-[Manifest]
-[TestRelease]
-[ConfirmRelease]
-[ExecDir]
-[ShareDir]
-[CPANFile]
-[UploadToCPAN]
-[AutoPrereqs]
-[OurPkgVersion]
-[ReadmeFromPod]
-[GatherDir]
-exclude_filename=README.pod
-
-[GithubMeta]
-[Git::ExcludeUntracked]
-[Git::NextVersion]
-
-[Prereqs]
-IO::Socket::SSL = 0
--phase = test
--relationship = recommends
-Pod::Coverage = 0
-indirect = 0
-multidimensional = 0
-bareword::filehandles = 0
+[@Milla]
