--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ notifications:
   email: false
 install:
 - cpanm --notest Dist::Milla
-- milla install
+- cpanm .
 script:
-- milla test
+- prove -r t
 
