--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 ---
 language: perl
 perl:
+- '5.10'
+- '5.12'
 - '5.14'
 - '5.16'
 - '5.18'
 notifications:
   email: false
 install:
-- cpanm .
+- cpanm -q --notest --mirror-only .
 script:
 - prove -r t
 
