--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,19 @@
 ---
 language: perl
 perl:
-- '5.10'
-- '5.12'
-- '5.14'
-- '5.16'
-- '5.18'
+  - '5.10'
+  - '5.12'
+  - '5.14'
+  - '5.16'
+  - '5.18'
 notifications:
   email: false
+matrix:
+  allow_failures:
+    - perl: 5.10 
+    - perl: 5.12
 install:
-- cpanm -q --notest --mirror-only .
+  - cpanm -q --notest --mirror-only .
 script:
-- prove -r t
+  - prove -r t
 
